# ailingo

./: .gitignore  .gitleaksignore  LICENSE  README.es.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  gen_examples.sh  gen_readme_from_ja.sh  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml
ailingo/: cli.py  file_manager.py  llm.py  prompt.py  translator.py  utils.py
ailingo/input_source/: __init__.py  editor_source.py  file_source.py  url_source.py
ailingo/output_source/: __init__.py  console_source.py  file_source.py
ailingo/prompts/: rewrite.j2  translate.j2  user.j2
example/: README-joke.en.md  README-joke.ja.md  bad-text.en-correct.md  bad-text.en.md  bad-text.ja-correct.md  bad-text.ja.md  i18n.en.toml  i18n.es.yaml  i18n.ja.toml  i18n.ja.yaml  i18n.yaml
tests/: test_cli.py  test_file_manager.py  test_prompt.py  test_translator.py
tests/input_source/: test_editor_source.py  test_input_file_source.py  test_url_source.py
tests/output_source/: test_console_source.py  test_output_file_source.py
transpa/: cli.py  translator.py  utils.py
