[tool.poetry]
name = "ailingo"
version = "0.1.1"
description = "A CLI Tool for Local File Translation Using Generative AI(LLMs)"
authors = ["Mitsuki Ogasahara <negiga@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.38.8"
typer = "^0.12.3"
rich = "^13.7.1"
google-cloud-aiplatform = { version = "^1.52.0", optional = true }
google-generativeai = { version = "^0.5.4", optional = true }
boto3 = { version = ">=1.28.57", optional = true }

instructor = "^1.3.2"
[tool.poetry.extras]
google = ["google-cloud-aiplatform", "google-generativeai"]
aws = ["boto3"]
all = ["google-cloud-aiplatform", "google-generativeai", "boto3"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pyright = "^1.1.364"
pytest = "^8.2.1"

pytest-cov = "^5.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ailingo = "ailingo.cli:app"
